@@ -1,6 +1,9 @@
 ---
 fixtures:
   repositories:
+    compliance_markup:
+      repo: "https://github.com/simp/pupmod-simp-compliance_markup"
+      branch: "testing_hotfix_06062019"
     concat: https://github.com/simp/puppetlabs-concat
     dconf: https://github.com/simp/pupmod-simp-dconf
     inifile: https://github.com/simp/puppetlabs-inifile
